--- a/Wilsons challenge-Blinky/MainWindow.xaml
+++ b/Wilsons challenge-Blinky/MainWindow.xaml
@@ -7,16 +7,20 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="500" Width="800">
     <Grid>
-        <TextBox x:Name="textboxEnterNumber" HorizontalAlignment="Left" Margin="30,87,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="127" Height="29"/>
+        <TextBox x:Name="p1" HorizontalAlignment="Left" Margin="30,87,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="127" Height="29"/>
         <Label Content="Guess the number" HorizontalAlignment="Left" Margin="38,35,0,0" VerticalAlignment="Top" Height="26" Width="111"/>
-        <Button x:Name="buttonGo" Content="Button" HorizontalAlignment="Left" Margin="30,139,0,0" VerticalAlignment="Top" Click="buttonGo_Click"/>
-        <Label x:Name="HighLowWin" Content="Label" HorizontalAlignment="Left" Margin="190,90,0,0" VerticalAlignment="Top" Width="58"/>
+        <Label x:Name="p1t" Content="Player 1" HorizontalAlignment="Left" Margin="190,90,0,0" VerticalAlignment="Top" Width="58"/>
         <Label x:Name="player1print" Content="Label" HorizontalAlignment="Center" Margin="0,10,0,0" VerticalAlignment="Top" Height="364" Width="117"/>
         <Label x:Name="player3print" Content="Label" HorizontalAlignment="Left" Margin="651,10,0,0" VerticalAlignment="Top" Height="364" Width="117"/>
         <Label x:Name="player2print" Content="Label" HorizontalAlignment="Left" Margin="492,10,0,0" VerticalAlignment="Top" Height="364" Width="117"/>
-        <CheckBox x:Name="checkBoxEasy" Content="Easy Difficulty" HorizontalAlignment="Left" Margin="38,203,0,0" VerticalAlignment="Top"/>
-        <CheckBox x:Name="checkBoxMedium" Content="Intermediate Difficulty" HorizontalAlignment="Left" Margin="38,227,0,0" VerticalAlignment="Top"/>
-        <CheckBox x:Name="checkBoxHard" Content="Adult Difficulty" HorizontalAlignment="Left" Margin="38,247,0,0" VerticalAlignment="Top"/>
+        <CheckBox x:Name="checkBoxEasy" Content="Easy Difficulty" HorizontalAlignment="Left" Margin="30,272,0,0" VerticalAlignment="Top"/>
+        <CheckBox x:Name="checkBoxMedium" Content="Intermediate Difficulty" HorizontalAlignment="Left" Margin="30,296,0,0" VerticalAlignment="Top"/>
+        <CheckBox x:Name="checkBoxHard" Content="Adult Difficulty" HorizontalAlignment="Left" Margin="30,316,0,0" VerticalAlignment="Top"/>
+        <TextBox x:Name="p2" HorizontalAlignment="Left" Margin="34,132,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" />
+        <TextBox x:Name="p3" HorizontalAlignment="Left" Margin="34,165,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+        <Label x:Name="p2t" Content="Player 2&#xD;&#xA;" HorizontalAlignment="Left" Margin="190,124,0,0" VerticalAlignment="Top"/>
+        <Label x:Name="p3t" Content="Player 3&#xD;&#xA;" HorizontalAlignment="Left" Margin="190,157,0,0" VerticalAlignment="Top"/>
+        <Button x:Name="btn" Content="Button" HorizontalAlignment="Left" Margin="51,214,0,0" VerticalAlignment="Top" Click="Button_Click"/>
 
     </Grid>
 </Window>
